Fix - margin in alignfull layout

--- a/style.css
+++ b/style.css
@@ -3035,8 +3035,8 @@ a#scroll-up:hover {
 		margin-right: -50px;
 	}
 	.no-sidebar #primary .entry-content > .alignfull {
-		margin-left: -100px;
-		margin-right: -100px;
+		margin-left: -30px;
+		margin-right: -30px;
 	}
 }
 
